service_c/envoy-config.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8791
      filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            config:
              tracing:
                operation_name: ingress
              stat_prefix: "ingress_8790"
              codec_type: "AUTO"
              route_config:
                name: local_route
                virtual_hosts:
                  - name: service_b_route
                    domains:
                      - "*"
                    routes:
                      - match:
                          prefix: "/"
                        route:
                          cluster: service_c
              http_filters:
                - name: envoy.router
  clusters:
    - name: service_c
      connect_timeout: 0.250s
      type: strict_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: service_c
            port_value: 8083

    - name: jaeger
      connect_timeout: 1s
      type: strict_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: jaeger
            port_value: 9411

tracing:
  http:
    name: envoy.zipkin
    config:
      collector_cluster: jaeger
      collector_endpoint: "/api/v1/spans"
      shared_span_context: false

admin:
  access_log_path: "/tmp/admin_access.log"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
